<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_primary"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/ExpenseOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/main_graph_container"
        android:paddingBottom="0dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/DB_expenseCategoryFood"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_expense_food" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/roboto_thin"
                android:text="Food"
                android:textAlignment="center"
                android:textColor="@color/expense_tint"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/DB_expenseTransportation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_expense_transpo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/roboto_thin"
                android:text="Transport"
                android:textAlignment="center"
                android:textColor="@color/expense_tint"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/DB_gainCategoryATM"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_gain_atm_card" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/category_atm"
                android:textAlignment="center"
                android:textColor="@color/gain_tint"
                android:textSize="10dp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/DB_gainCategoryAllowance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_gain_allowance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/category_allowance"
                android:textAlignment="center"
                android:textColor="@color/gain_tint"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/DB_moreCategories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_expense_more" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/category_grocery"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="10dp" />
        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.constraint.ConstraintLayout>